tests/parser/errors/labels.ray
break :1 5

print oui

b: 

print oui

b: 1 + 2


